<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wisell</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_hotspot">HotspotActivity</string>
    <string name="title_activity_connected_hotspot">ConnectedHotspotActivity</string>
    <string name="wifi_install_error_message">Cannot connect to wifi AP</string>
    <string name="uri_scheme">ussd</string>
    <string name="uri_authority">cd</string>
    <string name="uri_path">/</string>
    <string name="uri_param_name">uval</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome to WiSell</string>
    <string name="phone_indicateur">+221</string>
    <string name="privacy_link">Privacy</string>
    <string name="letstart">Let\'s start...</string>
    <string name="number_hint">77 555 55 55</string>
    <string name="term_use">Term of use</string>
    <string name="bt_continu">Suivant</string>


</resources>
