<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/Welcome_message"
        android:textSize="@dimen/text_size_xxlarge"
        android:textColor="@color/body_text_2"
        android:layout_marginTop="@dimen/home_welcome_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letstart"
        android:id="@+id/letstart"
        android:textSize="@dimen/text_size_medium" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_indicateur"
            android:id="@+id/textView"
            android:layout_marginTop="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/text_size_xlarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/subscribe_number"
            android:layout_gravity="right"
            android:hint="@string/number_hint"
            android:layout_alignBottom="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_link"
            android:id="@+id/privacy_label"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="64dp"
            android:layout_toLeftOf="@+id/subscribe_number"
            android:autoLink="web"
            android:textColor="@color/accent_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_use"
            android:id="@+id/textView4"
            android:autoLink="web"
            android:textColor="@color/accent_1"
            android:layout_alignTop="@+id/privacy_label"
            android:layout_alignLeft="@+id/subscribe_number" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/bt_continu"
            android:id="@+id/button"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>
