
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.c4a.wisell.ui.LoginActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:id="@+id/Welcome_message"
    android:textSize="@dimen/text_size_xxlarge"
    android:textColor="@color/body_text_2" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/letstart"
    android:id="@+id/letstart"
    android:textSize="@dimen/text_size_medium" />

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_indicateur"
        android:id="@+id/textView"
        android:textSize="@dimen/text_size_xlarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/subscribe_number"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone_number"
        android:layout_gravity="right"
        android:hint="@string/number_hint"
        android:layout_alignParentTop="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_link"
            android:id="@+id/privacy_label"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/subscribe_number"
            android:autoLink="web"
            android:textColor="@color/accent_1"
            android:layout_weight="0.56" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_use"
            android:id="@+id/textView4"
            android:autoLink="web"
            android:textColor="@color/accent_1"
            android:layout_alignTop="@+id/privacy_label"
            android:layout_toRightOf="@+id/privacy_label"
            android:layout_weight="0.46" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_continu"
            android:id="@+id/loginSuivant"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toRightOf="@+id/subscribe_number"
            android:gravity="center_vertical|right" />
    </TableRow>

</LinearLayout>